--- a/public/index.html
+++ b/public/index.html
@@ -27,8 +27,12 @@
     <title>React App</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    
+    <!--Aqui se inserta la pagina-->
+    <!--https://preview.themeforest.net/item/hotel-xenia-hotel-wordpress-theme/full_screen_preview/19235165?_ga=2.239660224.2109939453.1684010134-1349607156.1684010134-->
     <div id="root"></div>
+
+    
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
